[package]
name = "tmp"
version = "0.1.1"
edition = "2024"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "Helper function to quickly make file types defined in the config file"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.8"
